Fix broken styles on desktop

--- a/app/assets/stylesheets/layouts/_l-header-home.scss
+++ b/app/assets/stylesheets/layouts/_l-header-home.scss
@@ -82,8 +82,10 @@
       z-index: 20;
 
       @media screen and (min-width: $screen-m) {
-        background-color: transparent;
         position: relative;
+        bottom: 0;
+        margin: 0;
+        background-color: transparent;
         border: solid 2px $color-1;
         width: rem(30px);
         height: rem(30px);
